force-app/main/default/objects/PassengerDelayCompensation__c/PassengerDelayCompensation__c.object-meta.xml
<CustomObject>
    <label>PassengerDelayCompensation</label>
    <nameField>
        <displayFormat>PDC-{0000}</displayFormat>
        <label>PassengerDelayCompensation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PassengerDelayCompensations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>