force-app/main/default/objects/PassengerDelayCompensation__c/fields/Class_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Class_Upgrade__c</fullName>
    <label>Class Upgrade</label>
    <length>100</length>
    <type>Text</type>
</CustomField>