force-app/main/default/objects/PassengerDelayCompensation__c/fields/Delay_Duration__c.field-meta.xml
<CustomField>
    <fullName>Delay_Duration__c</fullName>
    <label>Delay Duration</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>