force-app/main/default/objects/PassengerDelayCompensation__c/fields/Flight__c.field-meta.xml
<CustomField>
    <fullName>Flight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flight</label>
    <referenceTo>Flight__c</referenceTo>
    <relationshipLabel>PassengerDelayCompensations (Flight)</relationshipLabel>
    <relationshipName>PassengerDelayCompensations1</relationshipName>
    <type>Lookup</type>
</CustomField>