force-app/main/default/objects/PassengerDelayCompensation__c/fields/Partnered_Hotel__c.field-meta.xml
<CustomField>
    <fullName>Partnered_Hotel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partnered Hotel</label>
    <referenceTo>Partnered_Hotel__c</referenceTo>
    <relationshipLabel>PassengerDelayCompensations</relationshipLabel>
    <relationshipName>PassengerDelayCompensations</relationshipName>
    <type>Lookup</type>
</CustomField>