force-app/main/default/objects/PassengerDelayCompensation__c/fields/Passenger__c.field-meta.xml
<CustomField>
    <fullName>Passenger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passenger</label>
    <referenceTo>Passenger__c</referenceTo>
    <relationshipLabel>PassengerDelayCompensations</relationshipLabel>
    <relationshipName>PassengerDelayCompensations</relationshipName>
    <type>Lookup</type>
</CustomField>