force-app/main/default/objects/PassengerDelayCompensation__c/fields/Reassigned_Flight__c.field-meta.xml
<CustomField>
    <fullName>Reassigned_Flight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reassigned Flight</label>
    <referenceTo>Flight__c</referenceTo>
    <relationshipLabel>PassengerDelayCompensations</relationshipLabel>
    <relationshipName>PassengerDelayCompensations</relationshipName>
    <type>Lookup</type>
</CustomField>